# termlogs

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml  termlogs.py
config/: config.py
logparser/: filter.py  parser.py
output/: file.py  format.py  screen.py
scanner/: filesize.py
termlogs/: __init__.py
termlogs/config/: config.py
termlogs/logparser/: filter.py  parser.py
termlogs/output/: file.py  screen.py
termlogs/scanner/: clean.py  scanner.py
